<resources>
    <string name="app_name">Diet Clash!</string>
    <string name="action_settings">Settings</string>
    <string name="get_started">Get Started</string>
    <string name="let_s_eat">Let\'s Eat!</string>
    <string name="my_progress">My Progress</string>
    <string name="my_achievements">My Achievements</string>
    <string name="todo">Placeholder Image</string>
    <string name="veggies">VEGGIES</string>
    <string name="dairy">DAIRY</string>
    <string name="fruit">FRUIT</string>
    <string name="meat">MEAT</string>
    <string name="_0">0</string>
    <string name="save">SAVE</string>
    <string name="reset">RESET</string>
    <string name="enter_serving_size">ENTER SERVING SIZE</string>
    <string name="stores_near_me">Stores Near Me</string>
    <string name="find_stores">Find Stores</string>
    <string name="boss_room">Boss Room</string>
    <string name="start_timer">Start Timer</string>
    <string name="stop_timer">Stop Timer</string>
    <string name="achievement_name">Achievement1</string>
    <string name="achievement_description">Place a description here</string>
    <string name="progress_completion">50%</string>
    <string name="daily_goal">Daily Goal</string>
    <string name="weekly_goal">Weekly Goal</string>
    <string name="ends">Ends</string>
    <string name="monster_health_progress">0</string>
    <string name="monster_health_total">100</string>
    <string name="monster_alive">ALIVE</string>
    <string name="monster_dead">DEAD</string>
    <string name="monster_image_description">A monster</string>
    <string name="set_goal">Set Goal</string>
</resources>
