<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".GetStarted">

    <TextView
        android:id="@+id/veggiesTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="115dp"
        android:layout_marginEnd="34dp"
        android:text="@string/veggies"
        app:layout_constraintEnd_toStartOf="@+id/veggiesServingView"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/dairyTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="3dp"
        android:text="@string/dairy"
        app:layout_constraintBottom_toTopOf="@+id/radioGroup"
        app:layout_constraintEnd_toStartOf="@+id/dairyServingsView"
        app:layout_constraintHorizontal_bias="0.511"
        app:layout_constraintStart_toStartOf="@+id/radioGroup"
        app:layout_constraintTop_toBottomOf="@+id/fruitTextView"
        app:layout_constraintVertical_bias="0.682" />

    <TextView
        android:id="@+id/fruitTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="78dp"
        android:text="@string/fruit"
        app:layout_constraintEnd_toEndOf="@+id/dairyTextView"
        app:layout_constraintStart_toStartOf="@+id/dairyTextView"
        app:layout_constraintTop_toBottomOf="@+id/meatTextView" />

    <TextView
        android:id="@+id/meatTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="7dp"
        android:text="@string/meat"
        app:layout_constraintBottom_toBottomOf="@+id/meatServingsView"
        app:layout_constraintEnd_toEndOf="@+id/fruitTextView"
        app:layout_constraintStart_toStartOf="@+id/fruitTextView" />

    <Button
        android:id="@+id/saveButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:background="#4CAF50"
        android:onClick="save"
        android:text="@string/save"
        app:layout_constraintStart_toStartOf="@+id/radioGroup"
        app:layout_constraintTop_toBottomOf="@+id/warning" />

    <Button
        android:id="@+id/resetButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:onClick="reset"
        android:text="@string/reset"
        app:layout_constraintEnd_toEndOf="@+id/radioGroup"
        app:layout_constraintTop_toBottomOf="@+id/warning" />

    <EditText
        android:id="@+id/veggiesServingView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:ems="10"
        android:hint="@string/enter_serving_size"
        android:importantForAutofill="no"
        android:inputType="number"
        app:layout_constraintBaseline_toBaselineOf="@+id/veggiesTextView"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:id="@+id/meatServingsView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="45dp"
        android:layout_marginEnd="24dp"
        android:ems="10"
        android:hint="@string/enter_serving_size"
        android:importantForAutofill="no"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/veggiesServingView" />

    <EditText
        android:id="@+id/fruitServingsView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:ems="10"
        android:hint="@string/enter_serving_size"
        android:importantForAutofill="no"
        android:inputType="number"
        app:layout_constraintBaseline_toBaselineOf="@+id/fruitTextView"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:id="@+id/dairyServingsView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="24dp"
        android:ems="10"
        android:hint="@string/enter_serving_size"
        android:importantForAutofill="no"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fruitServingsView" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="237dp"
        android:layout_height="32dp"
        android:layout_marginTop="15dp"
        android:checkedButton="@id/daily"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/warning"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dairyServingsView">

        <RadioButton
            android:id="@+id/daily"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="ToggleWarning"
            android:text="@string/daily_goal" />

        <RadioButton
            android:id="@+id/weekly"
            android:layout_width="251dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="ToggleWarning"
            android:text="@string/weekly_goal" />

    </RadioGroup>

    <TextView
        android:id="@+id/warning"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="25dp"
        android:text="Warning"
        app:layout_constraintBottom_toTopOf="@+id/resetButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup" />

</androidx.constraintlayout.widget.ConstraintLayout>