<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".LetsEat">

    <TableLayout
        android:layout_width="409dp"
        android:layout_height="match_parent">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="50dp"
            android:layout_marginVertical="50dp"
            android:gravity="center"
            android:padding="30dp">

            <Button
                android:id="@+id/meatButton"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:background="#E91E63"
                android:backgroundTint="#F44336"
                android:paddingHorizontal="40dp"
                android:text="@string/meat" />


            <Button
                android:id="@+id/veggiesButton"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:background="#4CAF50"
                android:backgroundTint="#8BC34A"
                android:paddingHorizontal="40dp"
                android:text="@string/veggies" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center">

            <TextView
                android:id="@+id/currentMeatServing"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:text="@string/_0" />

            <TextView
                android:id="@+id/currentVeggiesServing"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:text="@string/_0" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="50dp"
            android:layout_marginVertical="50dp"
            android:gravity="center"
            android:padding="30dp">

            <Button
                android:id="@+id/dairyButton"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:background="#F5DCDC"
                android:paddingHorizontal="40dp"
                android:text="@string/dairy" />

            <Button
                android:id="@+id/fruitButton"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:background="#FFE632"
                android:backgroundTint="#FFC100"
                android:paddingHorizontal="40dp"
                android:text="@string/fruit" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center">

            <TextView
                android:id="@+id/currentDairyServing"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:text="@string/_0" />

            <TextView
                android:id="@+id/currentFruitServing"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:text="@string/_0" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_marginHorizontal="50dp"
            android:layout_marginVertical="50dp"
            android:padding="30dp">

            <Button
                android:id="@+id/saveButton"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#4CAF50"
                android:gravity="center"
                android:paddingHorizontal="40dp"
                android:text="@string/save" />

            <Button
                android:id="@+id/resetButton"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:paddingHorizontal="40dp"
                android:text="@string/reset" />
        </TableRow>

    </TableLayout>
</LinearLayout>