<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".MainActivity"
    tools:showIn="@layout/activity_main">

    <TableLayout
        android:layout_width="409dp"
        android:layout_height="match_parent">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="20dp"
            android:layout_marginVertical="5dp"
            android:gravity="center"
            android:padding="30dp">

            <ImageView
                android:id="@+id/achivementsButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:contentDescription="@string/todo"
                android:onClick="myAchievements"
                android:paddingHorizontal="20dp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="20dp"
            android:layout_marginVertical="5dp"
            android:gravity="center"
            android:padding="20dp">

            <Button
                android:id="@+id/getStartedButton"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:onClick="getStarted"
                android:paddingHorizontal="20dp"
                android:text="@string/get_started" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="20dp"
            android:layout_marginVertical="5dp"
            android:gravity="center"
            android:padding="20dp">

            <Button
                android:id="@+id/letsEatButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:onClick="letsEat"
                android:paddingHorizontal="20dp"
                android:text="@string/let_s_eat" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="20dp"
            android:layout_marginVertical="5dp"
            android:gravity="center"
            android:padding="20dp">

            <Button
                android:id="@+id/myProgressButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:onClick="myProgress"
                android:paddingHorizontal="20dp"
                android:text="@string/my_progress" />
        </TableRow>


        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="20dp"
            android:layout_marginVertical="5dp"
            android:gravity="center"
            android:padding="20dp">

            <Button
                android:id="@+id/storesNearMeButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:onClick="storesNearMe"
                android:paddingHorizontal="20dp"
                android:text="@string/stores_near_me" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="20dp"
            android:layout_marginVertical="5dp"
            android:gravity="center"
            android:padding="20dp">

            <Button
                android:id="@+id/bossRoomButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:onClick="bossRoom"
                android:paddingHorizontal="20dp"
                android:text="@string/boss_room" />
        </TableRow>

    </TableLayout>
</LinearLayout>